--- a/events.html
+++ b/events.html
@@ -47,6 +47,10 @@
 	
 	<div id="eventlist"
 		
+		<p>June 18, 2016 - <a href="https://www.facebook.com/events/1193135654045068/">Tape Eagles will be winging their way to the Tennessee in Parkdale.</a>
+		</p>
+		<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Faaron.n.robertson%2Fposts%2F10206818198881548&width=500" width="500" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
 		<p>June 11, 2016 - <a href="https://www.facebook.com/events/1193135654045068/">Tape Eagles at the Open Tuning Festival</a>
 		</p>
 		<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftapeeagles%2Fposts%2F619210474895573&width=500" width="500" height="494" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
